--- a/style.css
+++ b/style.css
@@ -8,6 +8,8 @@ body {
     margin: 0;
     padding: 0;
     background-color: #f4f4f4;
+    position: relative;
+    z-index: 1;
 }
 
 header {
@@ -80,6 +82,7 @@ footer {
     position: relative;
     bottom: 0;
     width: 100%;
+    z-index: 1;
     margin-top: auto;
 }
 
@@ -87,7 +90,7 @@ footer {
     display: flex;
     align-items: center;
     flex-wrap: wrap;
-    margin: 2rem 0;
+    background-color: #8c2033;
 }
 .split-formulario {
     display: flex;
@@ -133,14 +136,13 @@ footer {
 .split .image {
     position: relative;
     flex: 1;
-    min-width: 300px;
-    padding-right: 1rem;
+    min-width: 400px;
+    padding-bottom: 0;
 }
-
 .split .image img {
     width: 100%;
-    height: auto;
-    border-radius: 8px;
+    margin-bottom: 1px;
+    height: 600px;
 }
 
 .split .image::before {
@@ -150,36 +152,13 @@ footer {
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(to right, rgba(140, 32, 51, 0.8), rgba(140, 32, 51, 0));
+    background: linear-gradient(to left, rgba(140, 32, 51, 0.8), rgba(140, 32, 51, 0));
     z-index: 1;
-    border-radius: 8px;
 }
 
 .split .image img {
     position: relative;
     z-index: 0;
-    border-radius: 8px;
-}
-
-.split .content {
-    flex: 1;
-    padding-left: 1rem;
-    text-align: left;
-
-}
-
-.split .content h2 {
-    font-family: 'WaterBrush';
-    color: #8c2033;
-    margin-bottom: 1rem;
-    padding-left: 55px;
-    font-size: 40px;
-}
-
-.split .content p {
-    max-width: 600px;
-    margin: 0 auto;
-    font-size: 1rem;
 }
 
 .grid-container {
@@ -276,7 +255,6 @@ button:hover {
     flex-wrap: wrap;
     justify-content: space-between;
     gap: 20px; 
-    margin: 50px;
 }
 
 .lojascontainer .cliente {
